Added ThingModel, and the sampler-scaffold element from Polymer, which will be modified.

--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "core-elements": "Polymer/core-elements#^0.4.0",
     "paper-elements": "Polymer/paper-elements#^0.4.0",
-    "polymer": "Polymer/polymer#^0.4.0"
+    "polymer": "Polymer/polymer#^0.4.0",
+    "ThingModel": "~0.19.2"
   },
   "devDependencies": {
     "polymer-test-tools": "Polymer/polymer-test-tools#^0.4.0"
