--- a/.jshintrc
+++ b/.jshintrc
@@ -22,6 +22,7 @@
     "wrap": true,
     "unwrap": true,
     "Polymer": true,
-    "Platform": true
+    "Platform": true,
+    "ThingModel": true
   }
 }
