--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "core-elements": "Polymer/core-elements#^0.4.0",
     "paper-elements": "Polymer/paper-elements#^0.4.0",
     "polymer": "Polymer/polymer#^0.4.0",
-    "ThingModel": "~0.19.2"
+    "ThingModel": "~0.19.2",
+    "zepto": "~1.1.4"
   },
   "devDependencies": {
     "polymer-test-tools": "Polymer/polymer-test-tools#^0.4.0"
