--- a/bower.json
+++ b/bower.json
@@ -2,13 +2,13 @@
   "name": "twitchteam",
   "version": "0.0.0",
   "dependencies": {
-    "core-elements": "Polymer/core-elements#^0.4.0",
-    "paper-elements": "Polymer/paper-elements#^0.4.0",
-    "polymer": "Polymer/polymer#^0.4.0",
+    "core-elements": "Polymer/core-elements#^0.5.0",
+    "paper-elements": "Polymer/paper-elements#^0.5.0",
+    "webcomponentsjs": "Polymer/webcomponentsjs#^0.5.0",
     "ThingModel": "~0.19.2",
     "zeptojs": "~1.1.4"
   },
   "devDependencies": {
-    "polymer-test-tools": "Polymer/polymer-test-tools#^0.4.0"
+    "polymer-test-tools": "Polymer/polymer-test-tools#^0.5.0"
   }
 }
